# v2022011020051

- Added mergeHidden() method to ValueObject trait
- Added merge() method to ValueObject trait
- Added copy() method to ValueObject trait

# v202201252020

- Added a simple DI manager class

## v202201282030

- Added [\Drewlabs\AuthHttpGuard\Traits\AttributesAware] interface
- Added [\Drewlabs\Support\Net\Ping\Client] for pinging tcp resources availability